Fix dark mode on macOS

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 :root {
+	color-scheme: light dark;
+
 	--safe-area-inset-top: env(safe-area-inset-top);
 	--safe-area-inset-bottom: env(safe-area-inset-bottom);
 	--safe-area-inset-left: env(safe-area-inset-left);
